--- a/src/index.scss
+++ b/src/index.scss
@@ -18,12 +18,12 @@
 
 
 @font-face {
-    font-family: 'Roboto';
-    src: url('./font/Roboto-Light.ttf');
+    font-family: 'Montserrat';
+    src: url('./font/Montserrat-Regular.ttf');
 }
 
 html {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 .App {
     height: 100vh;
