--- a/src/pages/Home/style/home.module.scss
+++ b/src/pages/Home/style/home.module.scss
@@ -9,18 +9,18 @@ main {
     grid-template-columns: 2fr auto;
 
     header {
-        background-color: red;
+        border: 1px solid var(--dark-shadow);
     }
 
     :global(.dashboard) {
-        background-color: blue;
         grid-column-start: 1;
         grid-column-end: 2;
         grid-row-start: 2;
         grid-row-end: 3;
     }
     aside { 
-        background-color: green;
+        box-shadow: var(--dark-shadow) 0px 0px 5px;
+        border: 1px solid var(--dark-shadow);
         grid-column-start: 2;
         grid-column-end: 3;
         grid-row-start: 1;
