--- a/src/styles/_utility.scss
+++ b/src/styles/_utility.scss
@@ -1,5 +1,10 @@
-@mixin flexCenter() {
+@mixin flexCenter(
+    $align-items: center,
+    $justify-content:center,
+    $direction: row,
+) {
     display:flex;
-    align-items: center;
-    justify-content: center;
+    align-items:  $align-items;
+    justify-content:  $justify-content;
+    flex-direction: $direction;
 }
