--- a/src/components/Dashboard/style/dashboard.module.scss
+++ b/src/components/Dashboard/style/dashboard.module.scss
@@ -1,27 +1,7 @@
 .dashboard {
     width: 100%;
-}
+    height: 100%;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
 
-aside {
-    width: 300px;
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
-    padding: 16px;
-    
-    .title {
-        font-weight: var(--bold);
-    }
-
-    .currentTask {
-        height: 200px;
-        width: 100%;
-        background-color: yellow;
-        border-radius: 24px;
-        padding: 12px;
-
-        p {
-            font-size: 16px;
-        }
-    }
 }
