--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,7 @@
     --white: #FFFFFF;
     --orange: #EE8F01;
     --gray-dark: #dedede;
+    --gray-light: #7b7b7b;
     --dark-shadow: rgba(149, 157, 165, 0.2);
 
     --border-radius-circle: 50%;
