--- a/src/components/Dashboard/style/completedTask.module.scss
+++ b/src/components/Dashboard/style/completedTask.module.scss
@@ -4,7 +4,7 @@
     width: 100%;
     height: 70px;
     border-radius: 24px;
-    border: 1px solid var(--dark-shadow);
+    border: 1px solid var(--gray-dark);
     box-shadow: var(--dark-shadow) 0px 8px 24px;
     padding: 12px;
     @include util.flexCenter($justify-content: space-between);
