--- a/src/components/Dashboard/style/taskCard.module.scss
+++ b/src/components/Dashboard/style/taskCard.module.scss
@@ -3,14 +3,15 @@
 .card {
     width: 100%;
     height: 100%;
-    border: 1px solid var(--dark-shadow);
+    border: 1px solid var(--gray-dark);
     border-radius: 24px;
     box-shadow: var(--dark-shadow) 0px 8px 24px;
     padding: 12px;
     display: flex;
     gap: 12px;
+    cursor: pointer;
     &-icon {
-        border: 1px solid var(--dark-shadow);
+        border: 1px solid var(--gray-dark);
         border-radius: 12px;
         padding: 8px;
         flex: 1;
@@ -19,5 +20,73 @@
 
     &-details {
         flex: 2;
+        display: flex;
+        padding-block: 24px 16px;
+        flex-direction: column;
+        gap: 8px;
+
+        &-title {
+            font-weight: var(--bold);
+        }
+
+        &-description {
+            font-size: 12px;
+            margin-bottom: 32px;
+            color: var(--gray-light);
+        }
+
+        &-deadline {
+            font-size: 12px;
+        }
+
+        progress[value]{
+            width: 100%;
+            &::-webkit-progress-bar {
+                width: calc(100% - 20px);
+                height: 10px;
+                background-color: var(--gray);
+                border-radius: 12px;
+                border: 1px solid  var(--gray-dark);
+              }
+            &::-webkit-progress-value {
+                height: 100%;
+                border-radius: 12px;
+                background-color: var(--orange);
+              }
+
+            //firefox support
+            &::-moz-progress-bar {
+                width: 100%;
+                height: 10px;
+                background-color: var(--orange);
+                border-radius: 12px;
+              }
+        }
+
+        &-firefox-progressbar {
+            width: calc(100% - 20px);
+            height: 10px !important;
+            background-color: var(--gray);
+            border-radius: 12px;
+            border: 1px solid  var(--gray-dark);
+        }
+
+        //fallback progress bar
+        &-progress-bar {
+            width: calc(100% - 20px);
+            height: 10px;
+            background-color: var(--gray);
+            border-radius: 12px;
+            border: 1px solid  var(--gray-dark);
+            &-fill {
+                width: 50%;
+                height: 100%;
+                border-radius: 12px;
+                background-color: var(--orange);
+            }
+        }
+
+
+        
     }
 }
