--- a/src/components/Header/style/header.module.scss
+++ b/src/components/Header/style/header.module.scss
@@ -26,7 +26,7 @@ header {
                 height: 36px;
                 border-radius: 18px;
                 padding-inline: 40px;
-                border: 1px solid #dedede;
+                border: 1px solid var(--gray-dark);
             }
         }
 
