--- a/src/pages/Home/style/home.module.scss
+++ b/src/pages/Home/style/home.module.scss
@@ -9,7 +9,7 @@ main {
     grid-template-columns: 2fr auto;
 
     header {
-        border: 1px solid var(--dark-shadow);
+        border: 1px solid  var(--gray-dark);
     }
 
     :global(.dashboard) {
@@ -20,7 +20,7 @@ main {
     }
     aside { 
         box-shadow: var(--dark-shadow) 0px 0px 5px;
-        border: 1px solid var(--dark-shadow);
+        border: 1px solid  var(--gray-dark);
         grid-column-start: 2;
         grid-column-end: 3;
         grid-row-start: 1;
